# YinYue

./: .gitignore  CMakeLists.txt  README.md  YinYue_zh_CN.ts  dianshiji.xml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  music_player_plan.md  xiaoai.xml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
src/: main.cpp
src/core/: dlnamanager.cpp  dlnamanager.h  localplayer.cpp  localplayer.h  musicplayer.cpp  musicplayer.h
src/gui/: dlnadevicedialog.cpp  dlnadevicedialog.h  mainwindow.cpp  mainwindow.h
src/models/: dlnadevice.cpp  dlnadevice.h  lyric.cpp  lyric.h  musicfile.cpp  musicfile.h  playlist.cpp  playlist.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  dlna_test.cpp  musicfile_test.cpp  musicplayer_test.cpp
